--- a/index.html
+++ b/index.html
@@ -258,15 +258,25 @@
       <div class="col-6 col-sm-12 col-lg-6 bg-secondary c-gallery text-white">
         <h1 class="">Lorem Ipsum</h1>
         <div class="row">
-          <div class="col-md-6">
-            <h4 class="outline">0M² | 0 DORMS</h4>
+        <div class="crr-center">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">0M² | 0 DORMS</li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"> 0M² | 0 SUÍTES</li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/img3.png" class="d-block" alt="..."/>
+              </div>
+              <div class="carousel-item">
+                <img src="images/img3.png" class="d-block" alt="..."/>
+              </div>
+            </div>
           </div>
-          <div class="col-md-6">
-            <h4 class="outline fill">0m² | 0 suítes</h4>
-          </div>
-          <img src="images/img3.png">
-        </div>
+</div>
 
+
+        </div>
       </div>
     </div>
   </div>
